# subrust

./: Cargo.toml  output.txt  vercel.json
.github/workflows/: rust.yml
api/: sub.rs
src/: constant.rs  enetity.rs  lib.rs  server.rs  tools.rs
