[package]
name = "sub_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
vercel_runtime = "1.1.4"
tokio = { version = "1.41.1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
base64 = "0.22.1"
regex = "1.11.1"
urlencoding = "2.1.3"
serde_yaml = "0.9.34+deprecated"
unicode-normalization = "0.1.24"
url = "2.5.4"

[[bin]]
name = "sub"
path = "api/sub.rs"

[lib]
path = "src/lib.rs"